fix: prose: white-space: wrap

--- a/desk/src/index.css
+++ b/desk/src/index.css
@@ -7,6 +7,7 @@
 		break-words
 		max-w-none
 		prose
+		prose-code:whitespace-pre-wrap
 		prose-img:border
 		prose-img:rounded-lg
 		prose-sm
